--- a/styles.css
+++ b/styles.css
@@ -1407,7 +1407,7 @@ p.quate {
   /* z-index: auto; */
 }
   .project-content{
-    background: red;
+    background: bisque;
     min-width: 92%;
     top: 18%;
     height: 80vh;
