--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ h1.introduce {
   width: 388px;
   line-height: 1.5;
   margin-top: -10%;
+  color: #fff;
 }
 h1.introduce::before {
   content: "";
