--- a/styles.css
+++ b/styles.css
@@ -952,9 +952,9 @@ h3.skip-show {
 header{
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
     top: 0;
+	height: 15vh;
 }
 nav{
-    min-height: 18vh;
     margin: auto;
     width: 90%;
     display: flex;
@@ -965,13 +965,13 @@ nav{
 	.project-content{
 /*		background: red;*/
 		width: 96%;
-		height: 88vh;
-		margin-top: 34px
+		height: 84vh;
+		top: auto;
 	}
 	p.quate{
 		width: 98%;
-		font-size: 22px;
-		line-height: 1.5;
+		font-size: 20px;
+		line-height: 1.3;
 		padding: 10px;
 	}
 	.skills-s{
